syntax = "proto3";

option java_multiple_files = true;
option java_package = "jp.openstandia.midpoint.grpc";

package midpoint;

/**
 * Provide services for self service resource.
 */
service SelfServiceResource {
    /**
     * Get my profile.
     */
    rpc getSelf(GetSelfRequest) returns (GetSelfResponse);

    /**
     * Modify self profile by deltas.
     */
    rpc modifyProfile(ModifyProfileRequest) returns (ModifyProfileResponse);

    /**
     * Update self credential with current password validating.
     */
    rpc updateCredential(UpdateCredentialRequest) returns (UpdateCredentialResponse);

    /**
     * Force update self credential.
     */
    rpc forceUpdateCredential(ForceUpdateCredentialRequest) returns (UpdateCredentialResponse);

    /**
     * Request role.
     */
    rpc requestRole(RequestRoleRequest) returns (RequestRoleResponse);

    /**
     * Add new user.
     */
    rpc addUser(AddUserRequest) returns (AddUserResponse);
}

message GetSelfRequest {
    repeated string options = 1;
    repeated string include = 2;
    repeated string exclude = 3;
    repeated string resolveNames = 4;
}

message GetSelfResponse {
    UserTypeMessage profile = 1;
}

message ExtensionMessage {
    string namespaceURI = 1;
    repeated ExtensionValue value = 2;
    bool is_single_value = 3;
}

message ExtensionValue {
    oneof value {
        string string = 1;
        PolyStringMessage poly_string = 2;
        IntegerMessage integer = 3;
        LongMessage long = 4;
    }
}

message BytesMessage {
    oneof bytes_optional {
        bytes value = 1;
    }
}

message IntegerMessage {
    oneof int_optional {
        int32 value = 1;
    }
}

message LongMessage {
    oneof long_optional {
        int64 value = 1;
    }
}

message PolyStringMessage {
    string orig = 1;
    string norm = 2;
}

message UserTypeMessage {
    // ObjectType

    // name.
    PolyStringMessage name = 1;
    // description
    string description = 2;
    // subtype
    repeated string subtype = 3;
    // lifecycleState
    string lifecycleState = 4;

    // FocusType
    BytesMessage jpegPhoto = 20;
    // cost center.
    string costCenter = 21;
    // locality.
    PolyStringMessage locality = 22;
    // preferredLanguage.
    string preferredLanguage = 23;
    // locale.
    string locale = 24;
    // timezone.
    string timezone = 25;
    // email address.
    string emailAddress = 26;
    // telephone number.
    string telephoneNumber = 27;

    // UserType

    // full name.
    PolyStringMessage fullName = 50;
    // given name.
    PolyStringMessage givenName = 51;
    // family name.
    PolyStringMessage familyName = 52;
    // additional name.
    PolyStringMessage additionalName = 53;
    // nick name.
    PolyStringMessage nickName = 54;
    // honorific prefix.
    PolyStringMessage honorificPrefix = 55;
    // honorific suffix.
    PolyStringMessage honorificSuffix = 56;
    // title.
    PolyStringMessage title = 57;
    // employee number.
    string employeeNumber = 58;
    // employee type.
    repeated string employeeType = 59;
    // organization.
    repeated PolyStringMessage organization = 60;
    // organizational unit.
    repeated PolyStringMessage organizationalUnit = 61;

    // extension. the key is "prefix:localPart" format of the QName.
    map<string, ExtensionMessage> extension = 100;
}

message ModifyProfileRequest {
    repeated UserItemDelta modifications = 1;
}

message UserItemDelta {
    UserItemPath name = 1;
    string valuesToAdd = 4;
    string valuesToReplace = 5;
    string valuesToDelete = 6;
}

enum UserItemPath {
    // ObjectType
    F_NAME = 0;
    F_DESCRIPTION = 1;
    F_SUBTYPE = 2;
    F_LIFECYCLE_STATE = 3;

    // FocusType
    F_JPEG_PHOTO = 20;
    F_COST_CENTER = 21;
    F_LOCALITY = 22;
    F_PREFERRED_LANGUAGE = 23;
    F_LOCALE = 24;
    F_TIMEZONE = 25;
    F_EMAIL_ADDRESS = 26;
    F_TELEPHONE_NUMBER = 27;

    // UserType
    F_FULL_NAME = 40;
    F_GIVEN_NAME = 41;
    F_FAMILY_NAME = 42;
    F_ADDITIONAL_NAME = 43;
    F_NICK_NAME = 44;
    F_HONORIFIC_PREFIX = 45;
    F_HONORIFIC_SUFFIX = 46;
    F_TITLE = 47;
    F_EMPLOYEE_NUMBER = 48;
    F_EMPLOYEE_TYPE = 49;
    F_ORGANIZATION = 50;
    F_ORGANIZATIONAL_UNIT = 51;
}

message ModifyProfileResponse {
}

message UpdateCredentialRequest {
    // Current credential.
    string old = 1;
    // New credential.
    string new = 2;
}

message ForceUpdateCredentialRequest {
    // New credential.
    string new = 1;
}

message UpdateCredentialResponse {
}

message RequestRoleRequest {
    // Assign requests.
    repeated AssignRequest assignRequest = 2;
}

message AssignRequest {
    // Oid of target user.
    string assignTargetOid = 1;
    // Oid of request role/organization/service.
    string requestObjectOid = 2;
    // Assign option
    AssignOption option = 3;
}

message AssignOption {
    // Oid of organization reference.
    string orgRef = 1;
}

message RequestRoleResponse {
}

message SingleMessage {
    string key = 1;
    repeated Message args = 2;
}

message Message {
    oneof arg {
         SingleMessage single = 3;
         MessageList list = 4;
         string string = 5;
    }
}

message MessageList {
    repeated Message message = 1;
}

message PolicyError {
    Message message = 1;
}

message AddUserRequest {
    repeated string options = 1;
    UserTypeMessage profile = 2;
}

message AddUserResponse {
    string oid = 1;
}
